--- a/nextpage_front/src/app/top-bar/top-bar.component.html
+++ b/nextpage_front/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,26 @@
-<p>top-bar works!</p>
+<div class="navbar">
+    <div class="frame-2">
+      <div class="component-1">
+        <p class="text-1">Home</p>
+        <div class="line-1" />
+      </div>
+      <div class="component-3">
+        <p class="text-2">catalog</p>
+        <div class="line-1" />
+      </div>
+      <div class="component-2">
+        <p class="text-3">MY BOOKS</p>
+        <div class="line-1" />
+      </div>
+    </div>
+    <div class="logo">
+      <img src="" />
+    </div>
+    <div class="avatar">
+      <div class="group">
+        <img src="logo_web-removebg-preview.svg" />
+      </div>
+    </div>
+    <div class="rectangle-1" />
+    <p class="text-6">Search all books...</p>
+  </div>
