start of top bar

--- a/nextpage_front/src/app/top-bar/top-bar.component.html
+++ b/nextpage_front/src/app/top-bar/top-bar.component.html
@@ -1,16 +1,16 @@
-<div class="navbar">
+<!-- <div class="navbar">
     <div class="frame-2">
       <div class="component-1">
-        <p class="text-1">Home</p>
-        <div class="line-1" />
+        <p class="text-1">HOME</p>
+        <div class="line-1"></div>
       </div>
       <div class="component-3">
-        <p class="text-2">catalog</p>
-        <div class="line-1" />
+        <p class="text-2">CATALOG</p>
+        <div class="line-1"></div>
       </div>
       <div class="component-2">
         <p class="text-3">MY BOOKS</p>
-        <div class="line-1" />
+        <div class="line-1"></div>
       </div>
     </div>
     <div class="logo">
@@ -18,9 +18,14 @@
     </div>
     <div class="avatar">
       <div class="group">
-        <img src="logo_web-removebg-preview.svg" />
+        <img src="logo_web-removebg-preview.svg">
       </div>
     </div>
-    <div class="rectangle-1" />
+    <div class="rectangle-1"></div>
     <p class="text-6">Search all books...</p>
-  </div>
+  </div> -->
+
+<div class="topbar">
+    <img src="logo.png" id="image">
+    <p id="top"> <a href="" class="top">HOME</a> <a href="" class="top">CATALOG</a> <a href="" class="top">MY BOOKS</a> <input type="text" placeholder="Search.." id="search"></p>
+</div>
