--- a/nextpage_front/src/app/top-bar/top-bar.component.html
+++ b/nextpage_front/src/app/top-bar/top-bar.component.html
@@ -26,6 +26,7 @@
   </div> -->
 
 <div class="topbar">
-    <img src="logo.png" id="image">
-    <p id="top"> <a href="" class="top">HOME</a> <a href="" class="top">CATALOG</a> <a href="" class="top">MY BOOKS</a> <input type="text" placeholder="Search.." id="search"></p>
+    <a href=""><img src="assets/images/logo_web-removebg-preview.png" id="image"></a>
+    <p id="top"> <a href="" class="top">HOME</a> <a href="" class="top">CATALOG</a> <a href="" class="top">MY&nbsp;BOOKS</a> <input type="text" placeholder="Search all books.." id="search"></p>
+    <a href="" id="log"><img src="assets/images/login.png" id="login"></a>
 </div>
