--- a/nextpage_front/src/app/top-bar/top-bar.component.css
+++ b/nextpage_front/src/app/top-bar/top-bar.component.css
@@ -7,7 +7,7 @@
 }
 .topbar{
   margin-top: 20px;
-  margin-left: 1cm;
+  margin-left: 4cm;
   position: relative;
   height: 2.65cm;
   width: 35cm;
@@ -25,23 +25,41 @@ p#top{
 .top{
   font-family:Khula;
   color: black;
-  margin-left: 100px;
+  margin-left: 80px;
   font-size: 18px;
   text-decoration: none;
   position: relative;
+  font-weight: lighter;
+  display: inline-block;
   /* align-items: center; */
+}
+/* Вот здесь для подчеркивания снизу */
+.top::after{ 
+  content:'';
+  background-color: #000000;
+  position: absolute;
+  width: 40%;
+  left:0;
+  height: 0.7px;
+  bottom: 0;
 }
 .top:hover{
   text-decoration-line: underline;
+  text-underline-offset: 4.2px;
+  text-decoration-thickness: 1px;
+}
+.underline::before{
+  width: 30%;
 }
 #search{
   position: relative;
   margin-left: 2.3cm;
   width: 7cm;
-  height: 0.7cm;
-  margin-top: -8px;
+  height: 0.8cm;
+  margin-top: -19px;
   border-style: solid;
   border-radius: 8px;
+  border-width: 1.6px;
   /* border-radius: px; */
   /* border */
 }
@@ -57,14 +75,15 @@ p#top{
 #login:hover{
 }
 input[type="text"]{
-  padding-left: 10px;
+  padding-left: 19px;
+  padding-top: 4px;
 }
 div#log{
-  margin-left: 32cm;
+  margin-left: 31cm;
   height: 1.3cm;
 }
 .loginProfile{
-  margin-left: -0.8cm;
+  margin-left: -2.2cm;
   background-color: rgb(249, 249, 249);
   width: 166px;
   height: 47px;
