--- a/nextpage_front/src/app/app.component.html
+++ b/nextpage_front/src/app/app.component.html
@@ -1,3 +1,4 @@
 
-<app-sign-up-page></app-sign-up-page>
+<!--<app-sign-up-page></app-sign-up-page>-->
+<app-sign-in-page></app-sign-in-page>
 <router-outlet></router-outlet>
