--- a/nextpage_front/src/app/sign-in-page/sign-in-page.component.html
+++ b/nextpage_front/src/app/sign-in-page/sign-in-page.component.html
@@ -3,14 +3,15 @@
   <div class="main-agileinfo">
     <div class="agileits-top">
       <form action="#" method="post">
-        <input class="text" type="text" name="Username" placeholder="Username" required="">
+<!--        <input class="text" type="text" name="Username" placeholder="Username" required="">-->
         <input class="text email" type="email" name="email" placeholder="Email" required="">
         <input class="text" type="password" name="password" placeholder="Password" required="">
-        <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
-        <input type="submit" value="Sign up">
+<!--        <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">-->
+        <input type="submit" value="Sign in">
       </form>
-<!--      <p>Don't have an Account? <a href="#"> Login Now!</a></p>-->
+      <p>Don't have an Account? <a href="#"> Sign up!</a></p>
     </div>
   </div>
   <!-- //copyright -->
 </div>
+
