--- a/nextpage_front/src/app/app.component.html
+++ b/nextpage_front/src/app/app.component.html
@@ -1,4 +1,5 @@
 
 <!--<app-sign-up-page></app-sign-up-page>-->
-<app-sign-in-page></app-sign-in-page>
+<!--<app-sign-in-page></app-sign-in-page>-->
+<app-review></app-review>
 <router-outlet></router-outlet>
