--- a/nextpage_front/src/app/review/review.component.html
+++ b/nextpage_front/src/app/review/review.component.html
@@ -1,1 +1,19 @@
-<p>review works!</p>
+<div class="review-block">
+  <div class="review-content">
+    <h4 class="user-info">
+      <a class="profile-link" href="#">yerkennz</a>
+      's review
+    </h4>
+    <hr style="height:1px;border-width:0;color:black;margin-top: 0em;margin-bottom: 0em;background-color:black">
+    <p class="user-review-text">
+      As I've said before, I'm not really a big fan of dystopia,
+      but I can see why this book is so popular - the dystopic world
+      is really well constructed and everything appears to be thought of to the point where it is
+      weirdly realistic? Yeah it's cool, I enjoyed it
+    </p>
+    <p class="user-review-rating">
+      4.5
+      <img src="/assets/star.png" alt="image" class="star">
+    </p>
+  </div>
+</div>
