--- a/nextpage_front/src/styles.css
+++ b/nextpage_front/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'Prompt';
+    src: url('src/assets/Prompt-Light.ttf');
+}
+@font-face {
+    font-family: 'Prompt-bold';
+    src: url('src/assets/Prompt-SemiBold.ttf');
+}
+@font-face {
+    font-family: 'Prompt-medium';
+    src: url('src/assets/Prompt-Medium.ttf');
+}
