--- a/nextpage_front/src/app/review/review.component.css
+++ b/nextpage_front/src/app/review/review.component.css
@@ -2,7 +2,7 @@ body {
   background: white;
   background-size: cover;
   background-attachment: fixed;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Prompt';
 }
 
 .review-block {
