--- a/nextpage_front/src/app/about-page/about-page.component.html
+++ b/nextpage_front/src/app/about-page/about-page.component.html
@@ -22,11 +22,11 @@
 
                 <div class="butts">
                         <button class="signup">
-                                <a href="">
+                                <a routerLink="/signup">
                                         Sign up
                                 </a>
                         </button>
-                        <a href="" class="signin">
+                        <a routerLink="/signin" class="signin">
                                 Sign in
                         </a>
                 </div>
