--- a/nextpage_front/src/app/home-page/home-page.component.html
+++ b/nextpage_front/src/app/home-page/home-page.component.html
@@ -1,3 +1,4 @@
+<app-top-bar></app-top-bar>
 <div id="fullHome">
     <p id="cur">Currently reading</p>
     <img src="assets/images/ex.png" id="mainImg">
