completed info book

--- a/nextpage_front/src/app/info-book/info-book.component.html
+++ b/nextpage_front/src/app/info-book/info-book.component.html
@@ -1,1 +1,9 @@
-<p>info-book works!</p>
+<img src="assets/images/ex.png" id="mainImg">
+<div id="right">
+    <p id="name">1984</p>
+    <p id="author">George Orwell</p>
+    <p id="des">DESCRIPTION</p>
+    <fieldset id="descr">
+        <label id="lab">It’s 1984. Winston Smith lives alone in London. He is a secret rebel plotting his escape from the Party: the deadly dictatorship led by Big Brother. Winston dreams of finding freedom, love and peace: everything that is outlawed. The story of Winston’s rebellion, and his need to love others, reveals the strength of the human spirit against the darkest sides of human nature..</label>
+    </fieldset>
+</div>
