--- a/nextpage_front/src/app/book-page/book-page.component.html
+++ b/nextpage_front/src/app/book-page/book-page.component.html
@@ -1,1 +1,4 @@
-<p>book-page works!</p>
+<app-top-bar></app-top-bar>
+<div style="margin-left: 120px;">
+    <app-info-book></app-info-book>
+</div>
