--- a/nextpage_front/src/app/app.component.html
+++ b/nextpage_front/src/app/app.component.html
@@ -1,2 +1,8 @@
-
+<app-catalog></app-catalog>
 <router-outlet></router-outlet>
+
+
+<!-- <app-top-bar></app-top-bar>
+<router-outlet></router-outlet>
+<app-footer></app-footer> -->
+
