--- a/nextpage_front/src/app/app.component.html
+++ b/nextpage_front/src/app/app.component.html
@@ -1,7 +1,3 @@
 
-<!--<app-sign-up-page></app-sign-up-page>-->
-<!--<app-sign-in-page></app-sign-in-page>-->
-<app-review></app-review>
-<!--<app-top-bar></app-top-bar>-->
-<!--<app-home-page></app-home-page>-->
+<app-review-page></app-review-page>
 <router-outlet></router-outlet>
