--- a/nextpage_front/src/app/review/review.component.css
+++ b/nextpage_front/src/app/review/review.component.css
@@ -6,8 +6,9 @@ body {
 }
 
 .review-block {
-  width: 50%;
-  margin: 3em auto;
+  width: 76%;
+  /*margin: 3em auto;*/
+  margin-bottom: 25px;
   border-radius: 8px;
   padding-left: 20px;
   padding-right: 20px;
