--- a/nextpage_front/src/app/app.component.html
+++ b/nextpage_front/src/app/app.component.html
@@ -1,3 +1,4 @@
 
-<app-review-page></app-review-page>
+<!--<app-review-page></app-review-page>-->
+<app-manage-account></app-manage-account>
 <router-outlet></router-outlet>
