manage-account upd

--- a/nextpage_front/src/app/manage-account/manage-account.component.html
+++ b/nextpage_front/src/app/manage-account/manage-account.component.html
@@ -14,14 +14,13 @@
 
           <form class="form-horizontal profile-update">
 
-            <label for="profile_username">Change username and email</label>
+            <h4>Change username and email</h4>
             <input class="text" type="text" name="Username" placeholder="Username" required="">
             <input class="text email" type="email" name="email" placeholder="Email" required="">
 
             <div class="form-group clearfix">
               <div class="col-sm-12 control-label">
-                <label for="profile_password">Change password</label>
-                <span class="text-helper">Only enter a password if you want to change it</span>
+                <h4>Change password</h4>
               </div>
               <input class="text" type="password" name="password" placeholder="Old Password" required="">
               <input class="text w3lpass" type="password" name="password" placeholder="New Password" required="">
