--- a/nextpage_front/src/app/top-bar/top-bar.component.css
+++ b/nextpage_front/src/app/top-bar/top-bar.component.css
@@ -71,8 +71,8 @@ p#top{
   margin-top: -1.45cm;
   display: flex;
 }
-#login:hover{
-}
+/* #login:hover{
+} */
 input[type="text"]{
   padding-left: 19px;
   padding-top: 4px;
