top bar above stats

--- a/nextpage_front/src/app/profile-page/profile-page.component.css
+++ b/nextpage_front/src/app/profile-page/profile-page.component.css
@@ -18,6 +18,8 @@
     height: 210px;
     margin-left: 723px;
     margin-top: -398px;
+    z-index: 1;
+    position: relative;
 }
 #find{
     margin-top: 10px;
