--- a/nextpage_front/src/app/sign-in-page/sign-in-page.component.html
+++ b/nextpage_front/src/app/sign-in-page/sign-in-page.component.html
@@ -3,11 +3,9 @@
   <div class="main-agileinfo">
     <div class="agileits-top">
       <form action="#" method="post">
-<!--        <input class="text" type="text" name="Username" placeholder="Username" required="">-->
-        <input class="text email" type="email" name="email" placeholder="Email" required="">
-        <input class="text" type="password" name="password" placeholder="Password" required="">
-<!--        <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">-->
-        <input type="submit" value="Sign in">
+        <input class="text email" type="email"  name="username" placeholder="Username" required="" [(ngModel)]="username">
+        <input class="text" type="password" name="password" placeholder="Password" required="" [(ngModel)]="password">
+        <input type="submit" value="Sign in" (click)="login()">
       </form>
       <p>Don't have an Account? <a href="#"> Sign up!</a></p>
     </div>
