--- a/nextpage_front/src/app/top-bar/top-bar.component.html
+++ b/nextpage_front/src/app/top-bar/top-bar.component.html
@@ -25,7 +25,7 @@
     <p class="text-6">Search all books...</p>
   </div> -->
 
-<div class="topbar">
+<div class="topbar"*ngIf="logged">
     <a routerLink="/home"><img src="assets/images/logo_web-removebg-preview1.png" id="image"></a>
     <p id="top"> <a routerLink="/home" class="top">HOME</a> <a routerLink="/catalogs" class="top">CATALOG</a> <a routerLink="/mybooks" class="top">MY&nbsp;BOOKS</a> <input type="text" [(ngModel)]="findBook" placeholder="Search all books.." id="search"></p>
     <div id="log">
@@ -33,7 +33,8 @@
       <div *ngIf="check==true">
         <button routerLink="/profile/1" class="loginProfile">Profile</button>
         <button class="loginProfile">Manage account</button>
-        <button class="loginProfile">Sign out</button>
+        <button class="loginProfile" *ngIf="logged" (click)="logOut()">Sign out</button>
       </div>
     </div>
-  </div>
+</div>
+
