--- a/nextpage_front/src/app/catalog-list/catalog-list.component.html
+++ b/nextpage_front/src/app/catalog-list/catalog-list.component.html
@@ -1,1 +1,9 @@
-<p>catalog-list works!</p>
+<!-- <div> -->
+        
+        <div *ngFor="let category of categoryList" class="category-box">
+                <a routerLink="/catalogs/{{category.name}}">{{category.name}}</a>    
+        </div>
+        
+<!-- </div> -->
+
+
