--- a/nextpage_front/src/app/my-book/my-book.component.css
+++ b/nextpage_front/src/app/my-book/my-book.component.css
@@ -2,3 +2,16 @@
         margin-left: 100px;
         margin-right: 100px;
 }
+*{
+        font-size:25px;
+        font-weight: 300;
+        line-height: 158%;;
+        src: url('src/assets/Prompt-Light.ttf');
+        font:   Prompt; 
+        display: block;
+        box-sizing: border-box;
+        font-family: sans-serif;
+}
+.card{
+        margin-top: 30px;
+}
