--- a/nextpage_front/src/app/book-page/book-page.component.css
+++ b/nextpage_front/src/app/book-page/book-page.component.css
@@ -15,6 +15,7 @@
 .rating{
     display: inline-flex;
     flex-direction: row-reverse;
+    /* vertical-align: bottom; */
 }
 .rating_item{
     color: grey;
@@ -38,10 +39,19 @@
 .rating[data-total-value='5'] .rating_item:nth-child(n + 1){
     color:yellow; 
 }
-.rating_item_part{
-    background: linear-gradient(to right, yellow 50%, transparent 50%);
+#rating_item_part{
+    font-size:40px;
+    background: linear-gradient(to right, yellow 10%, transparent 10%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+#rate{
+    font-family: 'Prompt';
+    margin-top: 16px;
+    margin-left: 5px;
+    font-size: 20px;
+    position: absolute;
+
 }
 #select{
     margin-top: 10px;
@@ -84,4 +94,27 @@
     font-size: 25px;
     font-weight: 600;
     text-transform: uppercase;
+}
+#reviewPost{
+    width: 698px;
+    height: 100px;
+    vertical-align: top;
+    font-family: 'Prompt';
+    font-size: 20px;
+}
+#post{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border-width: 0.1px;
+    width: 150px;
+    height: 30px;
+    background-color: white;
+    font-family: 'Prompt';
+}
+#post:hover{
+    background-color: rgb(203, 203, 203);
+}
+.Posting > #post,#reviewPost{
+    display: block;
 }
