--- a/nextpage_front/src/app/book-page/book-page.component.html
+++ b/nextpage_front/src/app/book-page/book-page.component.html
@@ -2,17 +2,27 @@
     <app-info-book></app-info-book>
     <div id="ReviewBlock">
         <p id="Reviews">Reviews</p>
-        <div *ngIf></div>
-        <app-review></app-review>
+        <div *ngIf="add==true">
+            <form action="#" method="post">
+                <div class="Posting">
+                    <div class="rating"> 
+                        <div class="rating_item" data-item-value="5" (click)="changeRate(5)">★</div>
+                        <div class="rating_item" data-item-value="4" (click)="changeRate(4)">★</div>
+                        <div class="rating_item" data-item-value="3" (click)="changeRate(3)">★</div>
+                        <div class="rating_item" data-item-value="2" (click)="changeRate(2)">★</div>
+                        <div class="rating_item" data-item-value="1" (click)="changeRate(1)">★</div>
+                    </div>
+                    <textarea id="reviewPost" name="review" [(ngModel)]="review"></textarea>
+                    <input type="submit" value="post" id="post" (click)="onSubmit()">
+                </div>
+            </form>
+        </div>
+        <app-review [bookId]="bookId"></app-review>
         <!-- <div *ngFor="review of reviews"></div> -->
     </div>
     <div id="main">
-        <div class="rating" > 
-            <div class="rating_item" data-item-value="5" (click)="changeRate(5)">★</div>
-            <div class="rating_item" data-item-value="4" (click)="changeRate(4)">★</div>
-            <div class="rating_item" data-item-value="3" (click)="changeRate(3)">★</div>
-            <div class="rating_item" data-item-value="2" (click)="changeRate(2)">★</div>
-            <div class="rating_item" data-item-value="1" (click)="changeRate(1)">★</div>
+        <div> 
+            <label id="rating_item_part">★</label> <label id="rate">Rating: {{rating}}%</label>
         </div>
         <div>
             <select id="select" (change)="saveOption()">
@@ -23,7 +33,7 @@
             </select>
         </div>
         <div>
-            <label class="rating_item_ex">★</label><a id="rev" onclick="add=true">add review <img src="/assets/images/edit.png" id="edit"></a>
+            <label class="rating_item_ex">★</label><a id="rev" (click)="add=true">add review <img src="/assets/images/edit.png" id="edit"></a>
             <!-- <img src="/assets/images/edit.png" id="edit"> -->
         </div>
     </div> 
