--- a/nextpage_front/src/app/review/review.component.html
+++ b/nextpage_front/src/app/review/review.component.html
@@ -1,4 +1,4 @@
-<div class="review-block" *ngFor="let book of myList">
+<div class="review-block" *ngFor="let book of mylist">
   <div class="review-content">
     <h4 class="user-info">
       <a class="profile-link" href="#">{{book.username}}</a>
