upd: front/ fixed: pycharm error

--- a/nextpage_front/src/app/catalog-list/catalog-list.component.html
+++ b/nextpage_front/src/app/catalog-list/catalog-list.component.html
@@ -1,8 +1,8 @@
 <!-- <div> -->
         
-        <div *ngFor="let category of categoryList" class="category-box">
-                <a routerLink="/catalogs/{{category.name}}">{{category.name}}</a>    
-        </div>
+<div *ngFor="let category of categoryList" class="category-box">
+        <a routerLink="/catalogs/{{category.id}}">{{category.name}}</a>    
+</div>
         
 <!-- </div> -->
 
