--- a/nextpage_front/src/app/top-bar/top-bar.component.css
+++ b/nextpage_front/src/app/top-bar/top-bar.component.css
@@ -13,7 +13,7 @@
   width: 35cm;
   /* background-color: black; */
 }
-p#top{
+#top{
   position: relative;
   margin-top:-36px;
   margin-left: 6cm;
@@ -40,7 +40,7 @@ p#top{
   width: 40%;
   left:0;
   height: 0.7px;
-  bottom: 0;
+  bottom: 0px;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
   
@@ -75,8 +75,8 @@ p#top{
   height: 1cm;
   margin-left: 1cm;
   /* margin-top:-cm; */
-  margin-top: -1.45cm;
-  display: flex;
+  margin-top: -4.4cm;
+  /* display: flex; */
 }
 /* #login:hover{
 } */
@@ -84,8 +84,8 @@ input[type="text"]{
   padding-left: 19px;
   padding-top: 4px;
 }
-div#log{
-  margin-left: 31cm;
+#log{
+  margin-left: 3cm;
   height: 1.3cm;
 }
 #loginProfile{
@@ -112,6 +112,8 @@ div#log{
 div#log{
   margin-left: 31cm;
   height: 1.3cm;
+  margin-top: -10px;
+  position: absolute;
 }
 #loginProfile{
   z-index: 2;
@@ -137,4 +139,25 @@ div#log{
 }
 .loginProfile1:hover,.loginProfile2:hover,.loginProfile3:hover{
   background-color: #bdbdbd;
+}
+.block{
+  /* height: 200px; задаем фиксированную высоту */
+    border: #000000;
+    border-radius: 12px;
+    display: block;
+    margin-left: 700px;
+    margin-top: -25px;
+    z-index: 2;
+    position: absolute;
+}
+#inBlock{
+  overflow-y: scroll;
+  margin-left: 2.3cm;
+  height: 100px;
+  width: 250px;
+  border: #000000;
+  border-radius: 12px;
+  z-index: 2;
+  background-color: rgb(232, 232, 232);
+  list-style-type:none;
 }
