--- a/nextpage_front/src/app/top-bar/top-bar.component.html
+++ b/nextpage_front/src/app/top-bar/top-bar.component.html
@@ -28,35 +28,39 @@
 
 <div class="topbar"*ngIf="logged">
     <a routerLink="/home"><img src="assets/images/logo_web-removebg-preview1.png" id="image"></a>
-    <p id="top"> <a routerLink="/home" class="top">HOME</a> <a routerLink="/catalogs" class="top">CATALOG</a> <a routerLink="/mybooks" class="top">MY&nbsp;BOOKS</a> <input type="text" [(ngModel)]="findBook" placeholder="Search all books.." id="search"></p>
+    <div id="top"> 
+      <a routerLink="/home" class="top">HOME</a> 
+      <a routerLink="/catalogs" class="top">CATALOG</a> 
+      <a routerLink="/mybooks" class="top">MY BOOKS</a> 
+      <!-- <input type="text" [(ngModel)]="findBook" placeholder="Search all books.." id="search"> -->
+
+    </div>
+    <div class="block">
+      <input type="text" [(ngModel)]="findBook" placeholder="Search all books.." id="search">
+      <div *ngIf="findBook!=''">
+        <ul id="inBlock">
+          <a href=""><li>hi</li></a>
+          <li>hi2</li>
+          <li>hi3</li>
+          <li>hi</li>
+          <li>hi2</li>
+          <li>hi3</li>
+          <li>hi</li>
+          <li>hi2</li>
+          <li>hi3</li>
+          <li>hi</li>
+          <li>hi2</li>
+          <li>hi3</li>
+        </ul>
+      </div>
+    </div>
     <div id="log">
       <input type="image" src="assets/images/login1.png" id="login" (click)="showBar()">
-
-     <!-- <div *ngIf="check==true" id="loginProfile">
-        <button class="loginProfile1">Profile</button>
-        <button class="loginProfile2">Manage account</button>
-        <button class="loginProfile3">Sign out</button> -->
 
       <div *ngIf="check==true" class="loginProfile">
         <button routerLink="/profile/1" class="loginProfile1">Profile</button>
         <button routerLink="/manage-account" class="loginProfile2">Manage account</button>
         <button class="loginProfile3" *ngIf="logged" (click)="logOut()">Sign out</button>
-
-<!--<div class="topbar">
-
-               конфликт
-    <a href=""><img src="assets/images/logo_web-removebg-preview1.png" id="image"></a>
-    <p id="top"> <a href="" class="top">HOME</a> <a href="" class="top">CATALOG</a> <a href="" class="top">MY&nbsp;BOOKS</a> <input type="text" [(ngModel)]="findBook" placeholder="Search all books.." id="search"></p>
-
-
-    <div id="log">
-      <input type="image" src="assets/images/login1.png" id="login" (click)="showBar()">
-      <div *ngIf="check==true" id="loginProfile">
-        <button routerLink="/profile/1" class="loginProfile1">Profile</button>
-        <button class="loginProfile2">Manage account</button>
-        <button class="loginProfile3">Sign out</button>конфликт -->
-
-
       </div>
     </div>
 </div>
