post and get but need to add user_id

--- a/nextpage_front/src/app/review/review.component.css
+++ b/nextpage_front/src/app/review/review.component.css
@@ -4,7 +4,10 @@ body {
   background-attachment: fixed;
   font-family: 'Prompt';
 }
-
+#no{
+  font-size: 25px;
+  font-family: 'Prompt';
+}
 .review-block {
 
   margin-bottom: 18px;
