--- a/nextpage_front/src/app/book-page/book-page.component.html
+++ b/nextpage_front/src/app/book-page/book-page.component.html
@@ -19,10 +19,11 @@
                 </div>
             </form>
         </div>
-        <app-review [bookId]="bookId"></app-review>
+        <app-review></app-review>
         <!-- <div *ngFor=""></div> -->
         <!-- <div *ngFor="review of reviews"></div> -->
     </div>
+    <div id="glav">
     <div id="main">
         <div> 
             <label id="rating_item_part">★</label> <label id="rate">Rating: {{rating}}%</label>
@@ -43,6 +44,7 @@
             <!-- <img src="/assets/images/edit.png" id="edit"> -->
         </div>
     </div> 
+    </div>
 </div>
 <!-- <div>Rating</div> -->
 <!-- ☆ -->
