userlist added to mybooks

--- a/nextpage_front/src/app/catalog-books/catalog-books.component.html
+++ b/nextpage_front/src/app/catalog-books/catalog-books.component.html
@@ -4,6 +4,6 @@
  
         <div *ngFor="let book of booklist" class="bookcard">
                 <a routerLink="/book/{{book.id}}"><img src="{{book.img}}" alt="{{book.title}}" class="bookimg"></a>
-                <a routerLink="/book/{{book.id}}"  class="booktitle">{{book.title}}</a>
+                <a routerLink="/book/{{book.id}}"  class="booktitle">{{book.title}}<br>{{book.author}}</a>
         </div>
 </div>
