--- a/nextpage_front/src/app/profile-page/profile-page.component.css
+++ b/nextpage_front/src/app/profile-page/profile-page.component.css
@@ -128,3 +128,20 @@
     width: 244px;
     height: 26px;
 }
+#inBlock{
+    overflow-y: scroll;
+    margin-left: 3cm;
+    height: 100px;
+    width: 220px;
+    margin-top: -10px;
+    border: #000000;
+    border-radius: 12px;
+    z-index: 2;
+    background-color: rgb(232, 232, 232);
+    list-style-type:none;
+    position: absolute;
+}
+#finding{
+    text-decoration: none;
+    /* text-align: left; */
+}
