--- a/nextpage_front/src/app/book-page/book-page.component.html
+++ b/nextpage_front/src/app/book-page/book-page.component.html
@@ -31,10 +31,12 @@
         </div>
         <div>
             <select id="select" (change)="saveOption()">
-                <option value="add book" id="option">add book</option>
-                <option value="currently reading" id="option">currently reading</option>
-                <option value="want to read" id="option">want to read</option>
-                <option value="already read" id="option">already read</option>
+                <option value="AddBook" id="option">add book</option>
+                <option value="Reading" id="option">Reading</option>
+                <option value="Read" id="option">Read</option>
+                <option value="Favoirites" id="option">Favoirites</option>
+                <option value="Planned" id="option">Planned</option>
+                <option value="Abandoned" id="option">Abandoned</option>
             </select>
         </div>
         <div>
