--- a/nextpage_front/src/app/home-page/home-page.component.css
+++ b/nextpage_front/src/app/home-page/home-page.component.css
@@ -81,11 +81,12 @@ div#pop{
 #popBlock{
     /* margin-top: 80px; */
     width: 427px;
-    height: 276px;
+    height: auto;
     border-radius: 8px;
     border-width: 2px;
     border-style: solid;
     border-color: black;
+    display: block;
 }
 #po{
     margin-top: -10px;
@@ -93,6 +94,7 @@ div#pop{
     line-height: 2px;
 }
 #Bname,#Bauthor{
+    display: block;
     font-family: 'Prompt-bold';
     font-weight: 300;
     font-size: 25px;
@@ -100,9 +102,18 @@ div#pop{
     margin-left: 10px;
     margin-top: 10px;
     /* margin-top: -1px; */
+    text-decoration: none;
+    color: black;
 }
 #Bauthor{
     font-family: 'Prompt';
     font-size: 20px;
     margin-top: -30px;
+}
+#link{
+    text-decoration: none;
+    color: black;
+}
+#link:hover{
+    text-decoration: underline;
 }
