--- a/nextpage_front/src/app/home-page/home-page.component.html
+++ b/nextpage_front/src/app/home-page/home-page.component.html
@@ -5,23 +5,23 @@
     <div id="rec">
         <p id="reco">Recommendations</p>
         <div id="recBooks">
-            <img src="assets/images/first.png" id="book">
-            <img src="assets/images/second.png" id="book">
-            <img src="assets/images/third.png" id="book">
+            <a routerLink="/book/{{recommendations[0].id}}"><img src="{{recommendations[0].img}}" id="book"></a>
+            <a routerLink="/book/{{recommendations[1].id}}"><img src="{{recommendations[1].img}}" id="book"></a>
+            <a routerLink="/book/{{recommendations[2].id}}"><img src="{{recommendations[2].img}}" id="book"></a>
         </div>
     </div>
     <div id="pop">
         <p id="popu">Popular this week</p>
         <div>
             <fieldset id="popBlock">
-                <p id="Bname">The Love Hypothesis</p>
-                <p id="Bauthor">Ali Hazelwood</p>
+                <p id="Bname"><a routerLink="/book/{{popular[0].id}}" id="link">{{popular[0].title}}</a></p>
+                <p id="Bauthor"><a routerLink="/book/{{popular[0].id}}" id="link">{{popular[0].author}}</a></p>
                 <hr id="po">
-                <p id="Bname">1984</p>
-                <p id="Bauthor">George Orwell</p>
+                <p id="Bname"><a routerLink="/book/{{popular[1].id}}" id="link">{{popular[1].title}}</a></p>
+                <p id="Bauthor"><a routerLink="/book/{{popular[1].id}}" id="link">{{popular[1].author}}</a></p>
                 <hr id="po">
-                <p id="Bname">The Love Hypothesis</p>
-                <p id="Bauthor">Ali Hazelwood</p>
+                <p id="Bname"><a routerLink="/book/{{popular[2].id}}" id="link">{{popular[2].title}}</a></p>
+                <p id="Bauthor"><a routerLink="/book/{{popular[2].id}}" id="link">{{popular[2].author}}</a></p>
             </fieldset>
         </div>
     </div>
