--- a/nextpage_front/src/app/info-book/info-book.component.html
+++ b/nextpage_front/src/app/info-book/info-book.component.html
@@ -1,5 +1,5 @@
 
-    <img src="{{book.img}}" id="mainImg">
+    <a routerLink="/book/{{book.id}}"><img src="{{book.img}}" id="mainImg"></a>
     <div id="right">
         <p id="name">{{book.title}}</p>
         <p id="author">{{book.author}}</p>
