--- a/nextpage_front/src/app/profile-page/profile-page.component.html
+++ b/nextpage_front/src/app/profile-page/profile-page.component.html
@@ -6,7 +6,7 @@
         <div><img src="/assets/images/star.png" id="star"> <p id="fr">My friends</p></div>
         <div *ngIf="myProfile==false"><img src="/assets/images/mail.png" id="mail"> <p id="ma">{{user.email}}</p></div>
         <div *ngIf="myProfile==true"><img src="/assets/images/add.png" id="add"> <p id="ad">Add to friends</div>
-        <div><img src="/assets/images/shelf.png" id="shelf"> <a id="sh" routerLink="/mybooks">Books</a></div>
+        <div><img src="/assets/images/shelf.png" id="shelf" *ngIf="id==0"> <a id="sh" routerLink="/mybooks" *ngIf="id==0">my Books</a></div>
     </fieldset>
     <fieldset id="stats">
         <p id="stat">Stats</p>
