--- a/nextpage_front/src/app/book-page/book-page.component.html
+++ b/nextpage_front/src/app/book-page/book-page.component.html
@@ -34,7 +34,7 @@
                 <option value="AddBook" id="option">add book</option>
                 <option value="Reading" id="option">Reading</option>
                 <option value="Read" id="option">Read</option>
-                <option value="Favoirites" id="option">Favoirites</option>
+                <option value="Favorites" id="option">Favorites</option>
                 <option value="Planned" id="option">Planned</option>
                 <option value="Abandoned" id="option">Abandoned</option>
             </select>
