--- a/nextpage_front/src/app/book-page/book-page.component.html
+++ b/nextpage_front/src/app/book-page/book-page.component.html
@@ -31,7 +31,7 @@
         </div>
         <div>
             <select id="select" (change)="saveOption()">
-                <option value="AddBook" id="option">add book</option>
+                <option value="AddBook" id="option">{{option}}</option>
                 <option value="Reading" id="option">Reading</option>
                 <option value="Read" id="option">Read</option>
                 <option value="Favorites" id="option">Favorites</option>
