--- a/nextpage_front/src/app/book-page/book-page.component.html
+++ b/nextpage_front/src/app/book-page/book-page.component.html
@@ -37,6 +37,7 @@
                 <option value="Favorites" id="option">Favorites</option>
                 <option value="Planned" id="option">Planned</option>
                 <option value="Abandoned" id="option">Abandoned</option>
+                <option value="Delete" id="option">Delete</option>
             </select>
         </div>
         <div>
