--- a/nextpage_front/src/app/sign-up-page/sign-up-page.component.html
+++ b/nextpage_front/src/app/sign-up-page/sign-up-page.component.html
@@ -1,7 +1,7 @@
 <div class="main-w3layouts wrapper">
   <div style="display: flex; width: 400px; justify-content: space-around;position: relative; left: 525px;">
     <img src="/assets/images/gameLogo.png" alt="image" class="center" style="width: 100px;">
-    <h1>NextPage</h1>
+    <h1>GameForces</h1>
 
   </div>
   <div class="main-agileinfo">
