--- a/nextpage_front/src/app/top-bar/top-bar.component.html
+++ b/nextpage_front/src/app/top-bar/top-bar.component.html
@@ -1,18 +1,18 @@
 
 <div class="topbar"*ngIf="logged">
-    <a routerLink="/home"><img src="assets/images/logo_web-removebg-preview1.png" id="image"></a>
+    <a routerLink="/home" style="font-size:40px; text-decoration:none;">GameForces</a>
     <div id="top"> 
       <a routerLink="/home" class="top">HOME</a> 
       <a routerLink="/catalogs" class="top">CATALOG</a> 
-      <a routerLink="/mybooks" class="top">MY BOOKS</a> 
+      <a routerLink="/mygames" class="top">MY GAMES</a> 
 
     </div>
     <div class="block">
-      <input type="text" [(ngModel)]="findGame" placeholder="Search all books.." id="search" (input)="search()">
+      <input type="text" [(ngModel)]="findGame" placeholder="Search all games ..." id="search" (input)="search()">
       <div>
         <ul id="inBlock" *ngIf="findGame!=''">
           <li *ngFor="let game of games">
-            <a routerLink="book/{{game.id}}" id="find">{{game.title}}</a>
+            <a routerLink="game/{{game.id}}" id="find">{{game.title}}</a>
           </li>
         </ul>
       </div>
