--- a/nextpage_front/src/app/top-bar/top-bar.component.html
+++ b/nextpage_front/src/app/top-bar/top-bar.component.html
@@ -20,8 +20,8 @@
     <div id="log">
       <input type="image" src="assets/images/login1.png" id="login" (click)="showBar()">
 
-      <div *ngIf="check==true" class="loginProfile">
-        <button routerLink="/profile" class="loginProfile1">Profile</button>
+      <div *ngIf="check" class="loginProfile">
+        <button (click)="navigateToProfile(user.id)" class="loginProfile1">Profile</button>
         <button routerLink="/manage-account" class="loginProfile2">Manage account</button>
         <button class="loginProfile3" *ngIf="logged" (click)="logOut()">Sign out</button>
       </div>
